updated for 2019 pt 1

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 
 
     <section id="services">
-      <h2 class="section-heading text-uppercase text-center">Conference Directors</h2>
+      <h2 class="section-heading text-uppercase text-center">Conference Director</h2>
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -93,49 +93,17 @@
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-md-6">
+          <div class="col-md-12">
 
-              <img src="img/SeanLee.png" alt="sponsor" style="float; width:301px;height:344px;">
+              <img src="img/SaraKnippa.png" alt="sponsor" style="float; width:344px;height:344px;">
 
-            <h4 class="service-heading">Sean Lee</h4>
-            <p class="text-muted">seanjaelee@berkeley.edu | Business Administration, Economics & History | 2020</p>
+            <h4 class="service-heading">Sara Knippa</h4>
+            <p class="text-muted">sara.knippa@berkeley.edu</p>
+            <p class="text-muted">Undeclared</p>
+            <p class="text-muted">2021</p>
+
           </div>
 
-          <div class="col-md-6">
-            <img src="img/AmyRan.png" alt="sponsor" style="float; width:301px;height:344px;">
-
-            <h4 class="service-heading">Amy Ran</h4>
-            <p class="text-muted">amyran@berkeley.edu | Business Administation | 2019</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="services">
-      <h2 class="section-heading text-uppercase text-center">Junior Conference Directors</h2>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-
-            <h3 class="section-subheading text-muted">
-          </h3>
-          </div>
-        </div>
-        <div class="row text-center">
-          <div class="col-md-6">
-
-              <img src="img/PranavGarg.png" alt="sponsor" style="float; width:301px;height:344px;">
-
-            <h4 class="service-heading">PranavGarg</h4>
-            <p class="text-muted">pgarg@berkeley.edu | Economics | 2021</p>
-          </div>
-
-          <div class="col-md-6">
-            <img src="img/EricLi.png" alt="sponsor" style="float; width:301px;height:344px;">
-
-            <h4 class="service-heading">Eric Li</h4>
-            <p class="text-muted">ericli3088@berkeley.edu | Computer Science, Data Science & Economics | 2021</p>
-          </div>
         </div>
       </div>
     </section>
@@ -150,54 +118,45 @@
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-md-4">
+          <div class="col-md-6">
 
-              <img src="img/AaronChow.png" alt="sponsor" style="float; width:301px;height:344px;">
+              <img src="img/SeanLee.png" alt="sponsor" style="float; width:344px;height:344px;">
 
-            <h4 class="service-heading">Aaron Chow</h4>
-            <p class="text-muted">aaronchow@berkeley.edu | Economics | 2021</p>
+            <h4 class="service-heading">Sean Lee</h4>
+            <p class="text-muted">seanjaelee@berkeley.edu</p>
+            <p class="text-muted">Business Administration & History</p>
+            <p class="text-muted">2020</p>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-6">
+            <img src="img/AmyRan.png" alt="sponsor" style="float; width:344px;height:344px;">
 
-              <img src="img/ShivayParekh.png" alt="sponsor" style="float; width:301px;height:344px;">
-
-            <h4 class="service-heading">Shivay Parekh</h4>
-            <p class="text-muted">Shivay99@berkeley.edu | Economics | 2021</p>
+            <h4 class="service-heading">Amy Ran</h4>
+            <p class="text-muted">amyran@berkeley.edu</p>
+            <p class="text-muted">Business Administation</p>
+            <p class="text-muted">2019</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
+              <img src="img/BenEisenberg.png" alt="sponsor" style="float; width:344px;height:344px;">
 
-              <img src="img/Jen.png" alt="sponsor" style="float; width:301px;height:344px;">
+            <h4 class="service-heading">Ben Eisenberg</h4>
+            <p class="text-muted">nebster100@berkeley.edu</p>
+            <p class="text-muted">Computer Science & History</p>
+            <p class="text-muted">2020</p>
+          </div>
+          <div class="col-md-6">
 
-            <h4 class="service-heading">Jen Shi</h4>
-            <p class="text-muted">zrshi@berkeley.edu | Economics & Statistics | 2019</p>
+              <img src="img/SophiaCowles.png" alt="sponsor" style="float; width:344px;height:344px;">
+
+            <h4 class="service-heading">Sophia Cowles</h4>
+            <p class="text-muted">sophia.cowles@berkeley.edu</p>
+            <p class="text-muted">Economics & Statistics</p>
+            <p class="text-muted">2020</p>
           </div>
 
         </div>
       </div>
     </section>
-
-    <section id="services">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase"></h2>
-            <h3 class="section-subheading text-muted">
-          </h3>
-          </div>
-        </div>
-        <div class="row text-center">
-
-          <div class="col-md-4">
-
-              <img src="img/AnkurSingh.png" alt="sponsor" style="float; width:301px;height:344px;">
-
-            <h4 class="service-heading">Ankur Singh</h4>
-            <p class="text-muted">ankursingh@berkeley.edu | Economics | 2021</p>
-          </div>
-
-    </section>
-
 
 
     <hr>
