--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             __________________________________
 
           </h3>
-            <p class="text-muted">The Berkeley Investment Conference is an annual national investment competition hosted at the UC Berkeley campus. The competition allows top passionate and talented undergraduate students from top universities across the nation to showcase their analytical talents, refine their investing skill-sets, expand their network and meet with people who share similar passions. Admission to the conference will be on the basis of the rigor of equity-analysis in a form of an investment memo, and selected teams will present their stock pitches in front of a judging panel of professional investors for a chance to present their pitches as finalists to win the competition.</p>
+            <p class="text-muted">The Berkeley Investment Conference is an annual, national investment competition hosted at UC Berkeley. Our competition provides passionate, talented undergraduates with an opportunity to showcase their analytical talents, to refine their investing skill-ses, and to expand their network of like-minded students and employers. Admission to the conference is based on the rigor of equity-analysis demonstrated in the team's submitted investment memo. In the first round, all participating teams will pitch their stock to a panel of professional investors. The top teams will then be chosen to participate in the final round, given the chance to win a cash prize.</p>
           </div>
         </div>
     </section>
@@ -121,7 +121,7 @@
               <i class="fa fa-book fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Learn</h4>
-            <p class="text-muted">Learn about investing from top-tier professionals in the Bay Area and develop investing skills by interacting with fellow peers</p>
+            <p class="text-muted">Learn about investing from top-tier professionals and improve your investing capabilities</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -129,7 +129,7 @@
               <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Share</h4>
-            <p class="text-muted"> Share ideas throughout the conference and present to an audience of undergraduates passionate in investing</p>
+            <p class="text-muted"> Share your investment style and ideas with fellow undergraduates as well as employers</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -137,7 +137,7 @@
               <i class="fa fa-users fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Compete</h4>
-            <p class="text-muted">Compete against rival teams from across the nation for a chance to present to the entire conference and a total prize pool of $1500</p>
+            <p class="text-muted">Compete against teams from across the nation for the chance to win a cash prize</p>
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">When and Where</h2>
-            <p class="text-muted">Throughout the University of California, Berkeley from March 16 to 17th</p>
+            <p class="text-muted">Haas School of Business, UC Berkeley, The 13th and 14th of April</p>
           </div>
         </div>
     </section>
