--- a/program.html
+++ b/program.html
@@ -84,43 +84,63 @@
         <div class="row">
           <div class="col-lg-12 text-left">
             <h2 class="section-heading text-uppercase">How It Works</h2>
-            <p>For the 1st round, contestants will have 5 minutes to prepare, 10 minutes to pitch, and 15 minutes for Q&A by judges. Teams are expected to deliver a full pitch to 3 judges. Questions can cover any variety of topics, including modeling assumptions, current events, and industry trends.
+            <p>For the 1st round, contestants will have 10 minutes to pitch and 15 minutes for Q&A from the judges. Questions can cover any variety of topics, including modeling assumptions, current events, and industry trends.
             </p>
             <p>
-            For the final round, contestants will have 15 minutes to pitch, and 15 minutes for Q&A by judges. Teams are expected to deliver a full pitch to 3 judges in addition to any conference particpants who wish to see final presentations. Questions can cover any topics as before.</p>
+            For the final round, contestants will have 15 minutes to pitch and 15 minutes for Q&A.</p>
             <h2 class="section-heading text-uppercase">Schedule</h2>
           </div>
         </div>
 
         <div class="tab">
-          <!--<button class="tablinks" onclick="openCity(event, 'Friday')">Friday</button>
-          <button class="tablinks" onclick="openCity(event, 'Saturday')">Saturday</button>-->
-        <!--  <table style="width:100%">
+          <button class="tablinks" onclick="openCity(event, 'Friday')">Saturday</button>
+          <button class="tablinks" onclick="openCity(event, 'Saturday')">Sunday</button>
+        <table style="width:100%">
             <tr>
-              <th>Friday</th>
               <th>Time</th>
+              <th>Event</th>
+              <th>Location</th>
             </tr>
             <tr>
+              <td>9:00am-9:45am</td>
               <td>Check-in</td>
-              <td>9:30am-10:00am</td>
+              <td>Anderson Auditorium</td>
             </tr>
             <tr>
-              <td>Pictures, Sponsor Tabling</td>
+              <td>9:45am-10:00am</td>
+              <td>Opening Remarks</td>
+              <td>Anderson Auditorium</td>
+            </tr>
+            <tr>
               <td>10:00am-11:00am</td>
+              <td>Keynote Speaker</td>
+              <td>Anderson Auditorium</td>
             </tr>
             <tr>
-              <td>Welcome Ceremony</td>
-              <td>11:00am-11:30am</td>
+              <td>11:00am-12:00pm</td>
+              <td>Speaker Panel</td>
+              <td>Anderson Auditorium</td>
             </tr>
             <tr>
-              <td>Opening Keynote Speaker + Q&A</td>
-              <td>11:30am-12:30pm</td>
+              <td>12:00pm-12:45pm</td>
+              <td>Networking Lunch</td>
+              <td>Wells Fargo Auditorium</td>
             </tr>
             <tr>
-              <td>Lunch & Social</td>
-              <td>12:30pm-2pm</td>
+              <td>12:45pm-1:45pm</td>
+              <td>Teach-In</td>
+              <td>Anderson Auditorium</td>
             </tr>
-
+            <tr>
+              <td>2:15pm-5:00pm</td>
+              <td>First Round Pitches</td>
+              <td>Anderson Auditorium</td>
+            </tr>
+            <tr>
+              <td>5:00pm</td>
+              <td>Closing Remarks</td>
+              <td>Anderson Auditorium</td>
+            </tr>
 
           </table>
         </div>
@@ -128,63 +148,31 @@
           <div class="tab">
           <table style="width:100%">
             <tr>
-              <th>Saturday</th>
               <th>Time</th>
-            </tr>
-            <tr>
-              <td>Check-in</td>
-              <td>8:30am-9am</td>
-            </tr>
-            <tr>
-              <td>Investment Panel</td>
-              <td>9am-9:30am</td>
-            </tr>
-            <tr>
-              <td>Panel Q&A</td>
-              <td>9:30am-9:50am</td>
-            </tr>
-            <tr>
-              <td>Competitor Pod and Location Assignments</td>
-              <td>9:50am-10am</td>
-            </tr>
-            <tr>
-              <td>First Round Pitches (Locations TBA)</td>
-              <td>10:30am-1:30pm</td>
-            </tr>
-            <tr>
-              <td>Final Pitches</td>
-              <td>2pm-4pm</td>
-            </tr>
-            <tr>
-              <td>Closing Ceremony & Awards</td>
-              <td>4:20pm-5pm</td>
-            </tr>
-          </table>
-          <!--
-          <table style="width:100%">
-            <tr>
               <th>Event</th>
-              <th>Time</th>
+              <th>Location</th>
             </tr>
             <tr>
-              <td>Check-in, Pictures, Sponsor Tabling</td>
-              <td>9:30am-11:00am</td>
+              <td>9:00am-9:30am</td>
+              <td>Sign-in and Networking</td>
+              <td>Anderson Auditorium</td>
             </tr>
             <tr>
-              <td>Welcome Ceremony</td>
-              <td>11:00am-11:30am</td>
+              <td>9:30am-9:45am</td>
+              <td>Opening Remarks</td>
+              <td>Anderson Auditorium</td>
             </tr>
             <tr>
-              <td>Opening Keynote Speaker + Q&A</td>
-              <td>11:30am-12:30pm</td>
+              <td>9:45am-12:30pmm</td>
+              <td>Final Pitches</td>
+              <td>Anderson Auditorium</td>
             </tr>
             <tr>
-              <td>Lunch & Social</td>
-              <td>12:30pm-2pm</td>
+              <td>1:00pm-1:30pm</td>
+              <td>Awards Ceremony</td>
+              <td>Anderson Auditorium</td>
             </tr>
-          </table> -->
-
-          <!--<button class="tablinks" onclick="openCity(event, 'Pods')">Pod Assignments</button>-->
+        </table>
 
         <iframe src="img/sched.pdf" style="width: 1100px;height: 1000px;border: none;"></iframe>
         </div>
@@ -252,7 +240,8 @@
             </tr>
           </table>
         </div>
-
+        <!--           <button class="tablinks" onclick="openCity(event, 'Pods')">Pod Assignments</button>
+         -->
         <!--
         <div id="Pods" class="tabcontent">
           <h3>Coming soon</h3> <!--
