--- a/speakers.html
+++ b/speakers.html
@@ -86,6 +86,15 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
+            <h1 class="section-heading text-uppercase">2018 Speakers</h1>
+
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Opening Speaker</h2>
 
             <h3 class="section-subheading text-muted">
